# Tutorial-ETL

./: .gitignore  README.md  ~$ETL Tutorial 2025.pptx
etl/sqlmesh-synthea/: README.md  config.yaml  pyproject.toml
etl/sqlmesh-synthea/audits/: care_site_audits.sql  cdm_source_audits.sql  cohort_audits.sql  cohort_definition_audits.sql  concept_ancestor_audits.sql  concept_audits.sql  concept_class_audits.sql  concept_relationship_audits.sql  concept_synonym_audits.sql  condition_era_audits.sql  condition_occurrence_audits.sql  cost_audits.sql  death_audits.sql  device_exposure_audits.sql  domain_audits.sql  dose_era_audits.sql  drug_era_audits.sql  drug_exposure_audits.sql  drug_strength_audits.sql  episode_audits.sql  episode_event_audits.sql  fact_relationship_audits.sql  location_audits.sql  measurement_audits.sql  metadata_audits.sql  non_empty_visit_occurrence.sql  not_null_person_id.sql  note_audits.sql  note_nlp_audits.sql  observation_audits.sql  observation_period_audits.sql  payer_plan_period_audits.sql  person_audits.sql  procedure_occurrence_audits.sql  proportion_of_standard_concept_ids.sql  provider_audits.sql  relationship_audits.sql  source_to_concept_map_audits.sql  specimen_audits.sql  visit_detail_audits.sql  (+2 more)
etl/sqlmesh-synthea/models/omop/: care_site.sql  cdm_source.sql  condition_era.sql  condition_occurrence.sql  cost.sql  death.sql  device_exposure.sql  dose_era.sql  drug_era.sql  drug_exposure.sql  episode.sql  episode_event.sql  fact_relationship.sql  location.sql  measurement.sql  metadata.sql  (+10 more)
etl/sqlmesh-synthea/seeds/: states_map.csv
(+1321 files in other folders)
